list Catégorie + Pharma

--- a/src/app/categorie-list/categorie-list.component.html
+++ b/src/app/categorie-list/categorie-list.component.html
@@ -2,3 +2,13 @@
     <h2 align="center">Nos Caégories</h2>
   </div>
 
+  <table class="table">
+    <tr><th>ID</th><th>Libelle</th><th>Modifier</th><th>Supprimer</th></tr>
+    <tr *ngFor="let cat of categories">
+      <td>{{cat.id}}</td>
+      <td>{{cat.libelle}}</td>
+      <td><a class="btn btn-warning">Mise à jour</a></td>
+      <td><a class="btn btn-danger">Supprimer</a></td>
+    </tr>
+  </table>
+
