--- a/src/app/pharma-list/pharma-list.component.html
+++ b/src/app/pharma-list/pharma-list.component.html
@@ -2,3 +2,16 @@
   <h2 align="center">Nos Pharmacies</h2>
 </div>
 
+<table class="table">
+  <tr><th>ID</th><th>Nom</th><th>Catégorie</th><th>Adresse</th><th>Région</th><th>Ville</th><th>Modifier</th><th>Supprimer</th></tr>
+  <tr *ngFor="let pharma of pharmacies">
+    <td>{{pharma.id}}</td>
+    <td>{{pharma.nom}}</td>
+    <td>{{pharma.categorie.libelle}}</td>
+    <td>{{pharma.adresse}}</td>
+    <td>{{pharma.region}}</td>
+    <td>{{pharma.ville}}</td>
+    <td><a class="btn btn-warning">Mise à jour</a></td>
+    <td><a class="btn btn-danger">Supprimer</a></td>
+  </tr>
+</table>
