creation de composants, pipe, string interpolation, event binding, property binding

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/listPost">Posts <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/registration">Registration <span class="sr-only">(current)</span></a>
+      </li>
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
