--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,19 +7,28 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/listPharma">Pharmacies <span class="sr-only">(current)</span></a>
+        <a class="nav-link" *ngIf="loginService.isUserLoggedIn()" routerLink="/dashbaord">Dashboard <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/listCategorie">Catégories <span class="sr-only">(current)</span></a>
+        <a class="nav-link" *ngIf="loginService.isUserLoggedIn()" routerLink="/listPharma">Pharmacies <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/listPatient">Patients <span class="sr-only">(current)</span></a>
+        <a class="nav-link" *ngIf="loginService.isUserLoggedIn()" routerLink="/listCategorie">Catégories <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/listPost">Posts <span class="sr-only">(current)</span></a>
+        <a class="nav-link" *ngIf="loginService.isUserLoggedIn()" routerLink="/listPatient">Patients <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/registration">Registration <span class="sr-only">(current)</span></a>
+        <a class="nav-link" *ngIf="loginService.isUserLoggedIn()" routerLink="/listPost">Posts <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" *ngIf="!loginService.isUserLoggedIn()" routerLink="/registration">Registration <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" *ngIf="!loginService.isUserLoggedIn()" routerLink="/login">Login <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" *ngIf="loginService.isUserLoggedIn()" routerLink="/logout">Logout <span class="sr-only">(current)</span></a>
       </li>
 
     </ul>
@@ -29,5 +38,4 @@
     </form>
   </div>
 </nav>
-
 <router-outlet></router-outlet>
