--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
 <h2 align="center">Bienvenue sur note application</h2>
+
+Vous êtes : {{prenom}} {{nom}}
+<br/><br/>
+Votre adresse : {{adresse}}
+<br/><br/>
+Votre téléphone : {{tel}}
